# ProAssist

./: .gitignore  CODING_CONVENTIONS.md  INSTALL_DST.md  PROJECT_CONTEXT.md  README.md  multi_conversation_dst_preservation.md  pyproject.toml  pytest.ini  requirements.txt
.cline/: config.json
.clinerules/: coding_convention.md
.kilocode/rules/: coding_convention.md
custom/: environment.yaml
custom/config/: simple_dst_generator.yaml
custom/config/data_source/: manual.yaml  proassist.yaml
custom/config/dst_data_generator/: siglip_embeddings.yaml  simple_dst_generator.yaml  sparse_sequence_generator.yaml  vision_embeddings.yaml
custom/config/generator/: batch.yaml  single.yaml
custom/config/inference/: dst_inference.yaml
custom/config/model/: gpt4o.yaml
custom/config/prospect/: dst_training.yaml  prospect.yaml
custom/config/training/: dst_proassist_training.yaml
custom/docs/: PROJECT_CONTEXT_COMPLETE.md  QUICKSTART.md  QUICKSTART_SUMMARY.md  dst_training_plan.md  failed_response_saving_feature.md  kv-cache-manipulation.md  multiprocessing_example.md  pipeline_architecture.md  review_instruction.md  test_coverage_analysis.md  test_improvement_summary.md  test_refactoring_summary.md  test_updates_summary.md
custom/docs/dst_data/: 1-dst_tsv_generation_plan.md  2-proassist_dst_label_plan.md  2.1-proassist_dst_label_plan_changes.md  2.2-hybrid_dst_implementation_plan.md  2.3-bidirectional_dst_span_construction.html  2.3-bidirectional_dst_span_construction.md  2.4-llm_span_construction.md  3-speak_dst_data_plan.md  4-speak_dst_integration_plan.md  5-dst_speak_training_data_model.md  6-dst_training_data_creation_plan.md  6-dst_training_data_transformation_plan.md  proassist_dst_label_plan.md
custom/docs/error_aware/: 4-error_aware_proassist.md  5-error_aware_proassist_proposal.md
custom/docs/inference/: 1-dst_inference_plan.md  2-revised_dst_inference_plan.md  3-dst_proassist_implementation.md
custom/docs/training/: 1-proassist_user_types_analysis.md  10-prospect_training_pipeline.md  10.1-visualize_model_input.md  10.2-expected_input_structure.md  11-dst_proassist_training_overview.md  11-negative_frame_subsampling.md  12-proassist_model_extension.md  2-e2e_training_plan.md  3-dst_training_implementation_plan.md  4-dst_training_progress_technical_summary.md  5-dst_training_batch_creation_plan.md  6-simplified_dst_training_proassist_pattern.md  6.1-prospect_training.md  6.1-prospect_training_data.json  6.2-prospect_dst_training_plan.md  6.3-prospect_dst_implementation_status.md  6.4-prospect_training_status.md  7.1-kv_cache_context_strategy.md  7.2-proassist_vs_prospect_comparison.md  7.3-window_based_prospect.md  8-token_level_dst_quick_plan.md  9-smolvlm_image_repr.md
custom/docs/updates/: 1-training_plan.md  10-sanity_check_baseline_plan.md  11-sanity_check_implementation_complete.md  12-cleanup_and_documentation_complete.md  13-context_strategy_implementation.md  14-context_strategy_implementation_and_kv_cache.md  15-custom_smolvlm_with_kv_cache_plan.md  16-e2e_test_errors_and_fixes.md  17-implementation_status.md  (+13 more)
custom/papers/: proassist_prepared_data.jsonl
custom/runner/: dst_data_generator.sh  dst_inference.sh  proassist_training.sh  run_dst_data_generator.sh  run_dst_generator.sh  run_dst_training.sh  run_proassist_label_generator.sh  run_prospect.sh  siglip_embeddings_saver.sh  sparse_data_generator.sh  training.sh  vision_embeddings_saver.sh
mmassist/configs/: arguments.py
scripts/: convert_json_to_tsv.py
(+200 files in other folders)
